--- a/api/build.gradle
+++ b/api/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    implementation(project(':ui'))
+    implementation project(':ui')
 }
 
 test {
