renew angular app

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "todo": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -21,27 +25,10 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
-                "output": "/fonts"
-              },
-              {
-                "glob": "metadata.json",
-                "input": "node_modules/@dynatrace/barista-icons",
-                "output": "/assets/icons"
-              },
-              {
-                "glob": "*.svg",
-                "input": "node_modules/@dynatrace/barista-icons",
-                "output": "/assets/icons"
-              }
+              "src/assets"
             ],
             "styles": [
-              "node_modules/@dynatrace/barista-fonts/typography.scss",
-              "node_modules/@dynatrace/barista-components/style/main.scss",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -104,7 +91,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
