--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.4",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "^11.2.4",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "^11.2.4",
@@ -20,16 +21,15 @@
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "@dynatrace/barista-components": "^9.4.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "@angular/cdk": "^11.0.3",
-    "@dynatrace/barista-icons": ">= 5.1.0 < 8",
     "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
+    "@dynatrace/barista-icons": ">= 5.1.0 < 8",
     "d3-scale": "^3.0.0",
     "d3-shape": "^1.3.5",
     "highcharts": "^7.0.0",
-    "lodash-es": "^4.17.15"
+    "lodash-es": "^4.17.15",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.11",
